[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/shark/shark_2.png" type="Texture" id=1]
[ext_resource path="res://assets/shark/shark_3.png" type="Texture" id=2]
[ext_resource path="res://assets/shark/shark_0.png" type="Texture" id=3]
[ext_resource path="res://assets/shark/shark_4.png" type="Texture" id=4]
[ext_resource path="res://assets/shark/shark_1.png" type="Texture" id=5]
[ext_resource path="res://assets/shark/shark_6.png" type="Texture" id=7]
[ext_resource path="res://assets/shark/shark_7.png" type="Texture" id=8]
[ext_resource path="res://enemies/shark/rock_throwing_shark.gd" type="Script" id=9]
[ext_resource path="res://assets/shark/sprite_00.png" type="Texture" id=10]
[ext_resource path="res://assets/shark/sprite_01.png" type="Texture" id=11]
[ext_resource path="res://assets/shark/sprite_02.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": false,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 10 ) ],
"loop": false,
"name": "spike",
"speed": 100.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 5 ) ],
"loop": true,
"name": "trawling",
"speed": 7.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 1.0
height = 2.0

[node name="rock_throwing_shark" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 9 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -5 )
frames = SubResource( 1 )
animation = "trawling"
frame = 1
playing = true

[node name="edge_detector" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 15, 5 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="spike_wait" type="Timer" parent="."]
one_shot = true

[node name="restart_trawl" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_rock_throwing_shark_body_entered"]
[connection signal="timeout" from="spike_wait" to="." method="_on_spike_wait_timeout"]
[connection signal="timeout" from="restart_trawl" to="." method="_on_restart_trawl_timeout"]
